--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -1,32 +1,13 @@
-.aboutContainer {
-  padding: 100px 20px;
-  max-width: 900px;
-  margin: auto;
-  text-align: center;
-}
-
 .aboutTitle {
-  font-size: 2.8rem;
-  color: #58a6ff;
+  font-size: clamp(2rem, 3vw, 2.8rem);
+  color: var(--primary-color);
   text-shadow: 0 0 10px rgba(88, 166, 255, 0.6);
-  margin-bottom: 50px;
 }
 
 .aboutDescription {
-  font-size: 1.3rem;
+  font-size: clamp(1rem, 1.5vw, 1.3rem);
   color: #c9d1d9;
+  max-width: 850px;
+  margin: auto;
   line-height: 1.8;
-}
-
-.fadeIn {
-  opacity: 0;
-  transform: translateY(20px);
-  animation: fadeIn 1s forwards;
-}
-
-@keyframes fadeIn {
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
 }
